Adding a few comments.

--- a/AudioDeviceChanger.ini
+++ b/AudioDeviceChanger.ini
@@ -11,10 +11,12 @@ Speaker=3
 Measure=Plugin
 Plugin=Win7AudioPlugin
 
+; Simple background box
 [MeterBackground]
 Meter=Image
 ImageName=Background.png
 
+; Display the name of the active audio device
 [MeterDeviceName]
 Meter=String
 MeasureName=MeasureWin7Audio
@@ -29,6 +31,7 @@ AntiAlias=1
 FontColor=0,0,0
 StringAlign=LEFT
 
+; Button to set headphones as the active audio device
 [MeterHeadphonesButton]
 Meter=Image
 ImageName=Headphones.png
@@ -38,6 +41,7 @@ H=50
 W=65
 LeftMouseUpAction=!Execute [!CommandMeasure "MeasureWin7Audio" "SetOutputIndex #Headphones#"] 
 
+; Button to set speakers as the active audio device
 [MeterSpeakerButton]
 Meter=Image
 ImageName=Speakers.png
