No need for an image background, drawing it in script.

--- a/AudioDeviceChanger.ini
+++ b/AudioDeviceChanger.ini
@@ -1,20 +1,18 @@
 [Rainmeter]
 Update=20
 Author=Chris234k
+; Background box
+BackgroundMode=2
+SolidColor=0,0,0,128
 
 [Variables]
 ;Numbers appear arbitrary, but might have something to do with order under Playback devices
-Headphones=1
-Speaker=3
+HEADPHONES=1
+SPEAKERS=3
 
 [MeasureWin7Audio]
 Measure=Plugin
 Plugin=Win7AudioPlugin
-
-; Simple background box
-[MeterBackground]
-Meter=Image
-ImageName=Background.png
 
 ; Display the name of the active audio device
 [MeterDeviceName]
@@ -39,7 +37,7 @@ x=150
 y=10
 H=50
 W=65
-LeftMouseUpAction=!Execute [!CommandMeasure "MeasureWin7Audio" "SetOutputIndex #Headphones#"] 
+LeftMouseUpAction=!Execute [!CommandMeasure "MeasureWin7Audio" "SetOutputIndex #HEADPHONES#"] 
 
 ; Button to set speakers as the active audio device
 [MeterSpeakerButton]
@@ -49,7 +47,7 @@ x=25
 y=0
 H=67
 W=67
-LeftMouseUpAction=!Execute [!CommandMeasure "MeasureWin7Audio" "SetOutputIndex #Speaker#"] 
+LeftMouseUpAction=!Execute [!CommandMeasure "MeasureWin7Audio" "SetOutputIndex #SPEAKERS#"] 
 
 ;Volume Bar addon
 [MeterVolumeBar]
