Explicit skin size variables.

--- a/AudioDeviceChanger.ini
+++ b/AudioDeviceChanger.ini
@@ -1,6 +1,14 @@
 [Rainmeter]
 Update=20
 Author=Chris234k
+
+; TODO Position meters based on dimensions:
+; https://docs.rainmeter.net/tips/screen-position-variables/
+
+; Skin dimensions, default: 260x120
+SkinWidth=260
+SkinHeight=120
+
 ; Background box
 BackgroundMode=2
 SolidColor=0,0,0,128
